--- a/app/views/main.html
+++ b/app/views/main.html
@@ -72,8 +72,8 @@
       </ul>
     </div>
       <ul class="list-group">
-     <li class="list-group-item" ng-repeat="file in torrent.files">
-        <a href="http://youimax.com/play?link={{ file.link}}&&name={{file.name}}" target="_blank"><input class="button" type="button" value="Play File/Download" ></a>
+      li class="list-group-item" ng-repeat="file in torrent.files">
+        <a href="http://youimax.com/play?link={{ file.link}}&name={{ file.name }}" target="_blank"><input class="button" type="button" value="Play File/Download" ></a>
                     </li>
       </ul>
     </div>
